--- a/styles/style.css
+++ b/styles/style.css
@@ -30,8 +30,8 @@ body > img {
     z-index: 2;
     background-color: #FFFFFF;
     box-shadow: 0 50px 70px rgba(0, 0, 0, 0.2);
-    margin: auto;
-    margin-top: 150px;
+    margin: 0 auto;
+    margin-top: 155px;
     width: 350px;
     height: 400px;
     border-radius: 15px;
@@ -131,12 +131,12 @@ body > img {
     body > img#top-img-pattern {
         z-index: 1;
         top: -90%;
-        left: -15%;
+        left: -20%;
     }
     body > img#bottom-img-pattern {
         z-index: 0;
-        bottom: -90%;
-        right: -15%;
+        bottom: -100%;
+        right: -20%;
     }
 }
 @media (max-width: 375px){
